- put command descriptions on buttons - initial implementation of UI

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,29 +2,23 @@
 
 <PageTitle>Trek.Net</PageTitle>
 
-<pre class="display">
-Hello, world!
-gxxfgfccgh
-ttttt
-rrrrr
-yyyyy
-</pre>
-<button>Do stuff 01</button>
-<button>Do stuff 02</button>
-<button>Do stuff 03</button>
-<button>Do stuff 04</button>
-<button>Do stuff 05</button>
-<button>Do stuff 06</button>
-<button>Do stuff 07</button>
-<button>Do stuff 08</button>
-<button>Do stuff 09</button>
-<button>Do stuff 10</button>
-<button>Do stuff 11</button>
-<button>Do stuff 12</button>
-<button>Do stuff 13</button>
-<button>Do stuff 14</button>
-<button>Do stuff 15</button>
-<button>Do stuff 16</button>
-<button>Do stuff 17</button>
+<pre class="display">@_display</pre>
+<button onclick="@(() => OnButtonClick(Btn01Title))">@Btn01Title</button>
+<button onclick="@(() => OnButtonClick(Btn02Title))">@Btn02Title</button>
+<button onclick="@(() => OnButtonClick(Btn03Title))">@Btn03Title</button>
+<button onclick="@(() => OnButtonClick(Btn04Title))">@Btn04Title</button>
+<button onclick="@(() => OnButtonClick(Btn05Title))">@Btn05Title</button>
+<button onclick="@(() => OnButtonClick(Btn06Title))">@Btn06Title</button>
+<button onclick="@(() => OnButtonClick(Btn07Title))">@Btn07Title</button>
+<button onclick="@(() => OnButtonClick(Btn08Title))">@Btn08Title</button>
+<button onclick="@(() => OnButtonClick(Btn09Title))">@Btn09Title</button>
+<button onclick="@(() => OnButtonClick(Btn10Title))">@Btn10Title</button>
+<button onclick="@(() => OnButtonClick(Btn11Title))">@Btn11Title</button>
+<button onclick="@(() => OnButtonClick(Btn12Title))">@Btn12Title</button>
+<button onclick="@(() => OnButtonClick(Btn13Title))">@Btn13Title</button>
+<button onclick="@(() => OnButtonClick(Btn14Title))">@Btn14Title</button>
+<button onclick="@(() => OnButtonClick(Btn15Title))">@Btn15Title</button>
+<button onclick="@(() => OnButtonClick(Btn16Title))">@Btn16Title</button>
+<button onclick="@(() => OnButtonClick(Btn17Title))">@Btn17Title</button>
 
 
