- WIP input box

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -20,5 +20,7 @@
 <button onclick="@(() => OnButtonClick(Btn15Title))">@Btn15Title</button>
 <button onclick="@(() => OnButtonClick(Btn16Title))">@Btn16Title</button>
 <button onclick="@(() => OnButtonClick(Btn17Title))">@Btn17Title</button>
+<label for="inputbox">@_inputboxLabel</label>
+<input type="text" id="inputbox" value="@_inputboxText"/>
 
 
