- support modal-ish input boxes in a web browser

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -3,24 +3,20 @@
 <PageTitle>Trek.Net</PageTitle>
 
 <pre class="display">@_display</pre>
-<button onclick="@(() => OnButtonClick(Btn01Title))">@Btn01Title</button>
-<button onclick="@(() => OnButtonClick(Btn02Title))">@Btn02Title</button>
-<button onclick="@(() => OnButtonClick(Btn03Title))">@Btn03Title</button>
-<button onclick="@(() => OnButtonClick(Btn04Title))">@Btn04Title</button>
-<button onclick="@(() => OnButtonClick(Btn05Title))">@Btn05Title</button>
-<button onclick="@(() => OnButtonClick(Btn06Title))">@Btn06Title</button>
-<button onclick="@(() => OnButtonClick(Btn07Title))">@Btn07Title</button>
-<button onclick="@(() => OnButtonClick(Btn08Title))">@Btn08Title</button>
-<button onclick="@(() => OnButtonClick(Btn09Title))">@Btn09Title</button>
-<button onclick="@(() => OnButtonClick(Btn10Title))">@Btn10Title</button>
-<button onclick="@(() => OnButtonClick(Btn11Title))">@Btn11Title</button>
-<button onclick="@(() => OnButtonClick(Btn12Title))">@Btn12Title</button>
-<button onclick="@(() => OnButtonClick(Btn13Title))">@Btn13Title</button>
-<button onclick="@(() => OnButtonClick(Btn14Title))">@Btn14Title</button>
-<button onclick="@(() => OnButtonClick(Btn15Title))">@Btn15Title</button>
-<button onclick="@(() => OnButtonClick(Btn16Title))">@Btn16Title</button>
-<button onclick="@(() => OnButtonClick(Btn17Title))">@Btn17Title</button>
-<label for="inputbox">@_inputboxLabel</label>
-<input type="text" id="inputbox" value="@_inputboxText"/>
-
-
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn01Title))">@Btn01Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn02Title))">@Btn02Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn03Title))">@Btn03Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn04Title))">@Btn04Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn05Title))">@Btn05Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn06Title))">@Btn06Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn07Title))">@Btn07Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn08Title))">@Btn08Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn09Title))">@Btn09Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn10Title))">@Btn10Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn11Title))">@Btn11Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn12Title))">@Btn12Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn13Title))">@Btn13Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn14Title))">@Btn14Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn15Title))">@Btn15Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn16Title))">@Btn16Title</button>
+<button class="btn btn-primary" onclick="@(async () => await OnButtonClick(Btn17Title))">@Btn17Title</button>
